--- a/index.html
+++ b/index.html
@@ -3081,6 +3081,7 @@ vertical-align: -.125em;
   <li><a href="#objetivo" id="toc-objetivo" class="nav-link" data-scroll-target="#objetivo"><span class="header-section-number">2</span> OBJETIVO</a>
   <ul class="collapse">
   <li><a href="#objetivo-general" id="toc-objetivo-general" class="nav-link" data-scroll-target="#objetivo-general"><span class="header-section-number">2.1</span> Objetivo general</a></li>
+  <li><a href="#objetivos-especificos" id="toc-objetivos-especificos" class="nav-link" data-scroll-target="#objetivos-especificos"><span class="header-section-number">2.2</span> Objetivos especificos</a></li>
   </ul></li>
   <li><a href="#materiales-y-métodos" id="toc-materiales-y-métodos" class="nav-link" data-scroll-target="#materiales-y-métodos"><span class="header-section-number">3</span> MATERIALES Y MÉTODOS</a>
   <ul class="collapse">
@@ -3111,7 +3112,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">GERMINACIÓN DE SEMILLAS DE TRIGO (Triticum aestivum) BAJO DIFERENTES NIVELES DE pH.</h1>
+<h1 class="title">GERMINACIÓN DE SEMILLAS DE TRIGO (<em>Triticum aestivum</em>) BAJO DIFERENTES NIVELES DE pH.</h1>
 </div>
 
 
@@ -3143,7 +3144,10 @@ vertical-align: -.125em;
 <h1 data-number="2"><span class="header-section-number">2</span> OBJETIVO</h1>
 <section id="objetivo-general" class="level2" data-number="2.1">
 <h2 data-number="2.1" class="anchored" data-anchor-id="objetivo-general"><span class="header-section-number">2.1</span> Objetivo general</h2>
-<p>Evaluar el efecto de diferentes niveles de pH (ácido, alcalino y neutro) en la germinación de semillas de trigo (<em>Triticum aestivum</em>). ## Objetivos especificos</p>
+<p>Evaluar el efecto de diferentes niveles de pH (ácido, alcalino y neutro) en la germinación de semillas de trigo (<em>Triticum aestivum</em>).</p>
+</section>
+<section id="objetivos-especificos" class="level2" data-number="2.2">
+<h2 data-number="2.2" class="anchored" data-anchor-id="objetivos-especificos"><span class="header-section-number">2.2</span> Objetivos especificos</h2>
 <p>-Calcular el índice de velocidad de germinación de semillas de trigo en función del pH (ácido, neutro y alcalino).</p>
 <p>-Evaluar el tiempo promedio de germinación de semillas de trigo bajo condiciones de pH ácido, alcalino y neutro.</p>
 <p>-Determinar el porcentaje de germinación de semillas de (<em>Triticum aestivum</em>) sometidas a diferentes niveles de pH.</p>
